@@ -522,6 +522,8 @@ because of Phabricator reports.
 * TempUserConfig::getMatchPattern has been deprecated, use
   TempUserConfig::getMatchPatterns instead.
 * (T230025) Title::purgeSquid(), deprecated in 1.35, now emits warnings.
+* The rarely-used convenience method Xml::wrapClass() is now deprecated. Instead
+  you can use Xml::tags('span', ['class'=>'foo'], 'bar').
 * …
 
 === Other changes in 1.42 ===
